<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.addCustomer">


    <androidx.cardview.widget.CardView
        android:id="@+id/pageBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewItemStyle"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal"
            android:padding="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_customer_create"
                android:textStyle="bold"
                android:textColor="@color/maincolor"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="30sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_save" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_below="@+id/pageBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_contact" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_address" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelCreateCustomerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="5dp"
        android:text="@string/from_cancel" />

</RelativeLayout>