<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.customerPage">

    <androidx.cardview.widget.CardView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewItemStyle"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:orientation="horizontal"
                android:padding="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_customer"
                    android:textStyle="bold"
                    android:textColor="@color/maincolor"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="30sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveEditCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_save" />
            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:padding="8dp">


                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/from_name"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/from_enter_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/from_contact"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/contactEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"

                    android:hint="@string/from_enter_contact" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_address"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/addressEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/from_enter_address" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addServiceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/from_add_service_for_customer" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--android:text="@string/from_Not_services"-->
        <TextView
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleServicesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</RelativeLayout>