<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.addCustomer">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/pageBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewItemStyle"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:orientation="horizontal"
                android:padding="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_user"
                    android:textStyle="bold"
                    android:textColor="@color/maincolor"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="30sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveUserButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_save" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="8dp">


            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/from_name"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/from_enter_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/from_password"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/passEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/from_new_pass"
                android:inputType="textPassword"
                android:backgroundTint="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passCheckLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/from_confirm_password"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/confirmPassEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/from_new_pass"
                android:inputType="textPassword"
                android:backgroundTint="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/warning"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/warningText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_pass_not_match"
                android:textColor="@color/red"
                android:textSize="13sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewBlueStyle"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/from_user_type"
                    android:textAppearance="?android:textAppearanceMedium" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <Spinner
                    android:id="@+id/userTypeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="8dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelCreateCustomerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_cancel" />
    </LinearLayout>

</RelativeLayout>